unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Address__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Address__c</fullName>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>