unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Comments__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>