unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Email__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>