unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__External_key__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__External_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Registrant_ID on Zoom Website</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>