unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Industry__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Industry__c</fullName>
    <label>Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>