unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Job_Title__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>