unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Join_Url__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Join_Url__c</fullName>
    <label>Join Url</label>
    <type>TextArea</type>
</CustomField>