unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>