unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/fields/zoom_app__Organization__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Organization__c</fullName>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>