unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Registrant__c/listViews/zoom_app__All.listView-meta.xml
<ListView>
    <fullName>zoom_app__All</fullName>
    <columns>NAME</columns>
    <columns>zoom_app__External_key__c</columns>
    <columns>zoom_app__First_Name__c</columns>
    <columns>zoom_app__Last_Name__c</columns>
    <columns>zoom_app__Email__c</columns>
    <columns>zoom_app__Phone__c</columns>
    <columns>zoom_app__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>